Bug #16997 Table rename that changes database does not rename indexes: merge